# income-app

profitcalculator/: Cargo.toml
profitcalculator/src/: main.rs
profitcalculator/ui/: appwindow.slint
